Body now has a max width of 1222px. Only really affects large screens, stops things looking too wide.

--- a/app/components/game-nav/style.scss
+++ b/app/components/game-nav/style.scss
@@ -212,6 +212,11 @@ $panel-color: $bg-dark-lighter;
 
 }
 
+#nav-body-inner {
+  max-width:1222px;
+  margin: 0 auto;
+}
+
 // Balloon
 #tabbar-balloon {
   
